// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-esbuild > should not set format iife when target is not web 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-esbuild/compiled/esbuild-loader/index.js",
            "options": {
              "charset": "ascii",
              "loader": "jsx",
              "target": "es2015",
            },
          },
        ],
      },
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
          /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-esbuild/compiled/esbuild-loader/index.js",
            "options": {
              "charset": "ascii",
              "loader": "tsx",
              "target": "es2015",
            },
          },
        ],
      },
    ],
  },
  "optimization": {
    "minimizer": [
      ESBuildMinifyPlugin {
        "options": {
          "css": true,
          "format": undefined,
          "legalComments": "inline",
          "minify": true,
          "target": "es2015",
        },
        "transform": [Function],
      },
    ],
  },
}
`;

exports[`plugin-esbuild > should set esbuild minimizer in production 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-esbuild/compiled/esbuild-loader/index.js",
            "options": {
              "charset": "ascii",
              "loader": "jsx",
              "target": "es2015",
            },
          },
        ],
      },
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
          /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-esbuild/compiled/esbuild-loader/index.js",
            "options": {
              "charset": "ascii",
              "loader": "tsx",
              "target": "es2015",
            },
          },
        ],
      },
    ],
  },
  "optimization": {
    "minimizer": [
      ESBuildMinifyPlugin {
        "options": {
          "css": true,
          "format": "iife",
          "legalComments": "inline",
          "minify": true,
          "target": "es2015",
        },
        "transform": [Function],
      },
    ],
  },
}
`;

exports[`plugin-esbuild > should set esbuild-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-esbuild/compiled/esbuild-loader/index.js",
            "options": {
              "charset": "ascii",
              "loader": "jsx",
              "target": "es2015",
            },
          },
        ],
      },
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
          /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/compat/plugin-esbuild/compiled/esbuild-loader/index.js",
            "options": {
              "charset": "ascii",
              "loader": "tsx",
              "target": "es2015",
            },
          },
        ],
      },
    ],
  },
}
`;
